--- a/imports/ui/pages/Orders/List/style.scss
+++ b/imports/ui/pages/Orders/List/style.scss
@@ -11,6 +11,11 @@
         @include container-padding;
         text-decoration: none;
         background-color: var(--primary-bg);
+        .order-main-line {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
         .order-name {
             font-weight: 500;
             font-size: 18px;
@@ -24,6 +29,23 @@
         .order-items {
             font-weight: 100;
             font-size: 10px;
+            .order-items-list {
+                margin: 0;
+                padding: 0;
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                li {
+                    list-style: none;
+                    margin: 3px;
+                    img {
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 50%;
+                        border: 1px solid #eee;
+                    }
+                }
+            }
         }
         &:hover {
             background-color: var(--secondary-bg);
