added cart, shop page

--- a/imports/ui/components/common/style.scss
+++ b/imports/ui/components/common/style.scss
@@ -6,3 +6,5 @@
 @import './SuccessError/style.scss';
 
 @import './Switch/Switch.scss';
+@import './Card/CartItemCardStyle.scss';
+@import './Card/ItemCardStyle.scss';
