--- a/imports/ui/pages/styles.scss
+++ b/imports/ui/pages/styles.scss
@@ -3,3 +3,4 @@
 @import './Inventory/style.scss';
 @import './ShopPage/style.scss';
 @import './Cart/style.scss';
+@import './UserHomePage/style.scss'
