--- a/imports/ui/pages/ShopPage/style.scss
+++ b/imports/ui/pages/ShopPage/style.scss
@@ -3,7 +3,35 @@
   .shop-name {
     text-align: center;
   }
-  
+  .shop-details-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: fit-content;
+    gap: 24px;
+    img{
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+    }
+    .shop-info{
+      border-left: 1px solid rgb(238, 238, 238);
+      height: 80px;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      justify-content: center;
+      gap: 4px;
+      padding-left: 24px;
+      div{
+        font-weight: 300;
+        button{
+          padding: 4px 8px;
+          font-size:x-small;
+        }
+      }
+    }
+  }
   .available-items-box {
     display: flex;
     align-items: center;
