--- a/imports/ui/pages/UserHomePage/style.scss
+++ b/imports/ui/pages/UserHomePage/style.scss
@@ -1,6 +1,39 @@
 .user-home-page{
-  margin: 14px;
-  .order-card{
-    border: 1pz solid;
+  // margin: 14px;
+  .user-details{
+    .name-box,.contact-box,.address-box{
+      display: flex;
+      align-items: center;
+      justify-content: start;
+      gap: 8px;
+      img{
+        width: 25px;
+      }
+    }
+    .user-box{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: fit-content;
+      gap: 24px;
+      img{
+        width: 100px;
+        border-radius: 50%;
+      }
+      .user-info{
+        border-left: 1px solid rgb(238, 238, 238);
+        height: 80px;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        gap: 4px;
+        padding-left: 24px;
+        div{
+          font-weight: 300;
+        }
+      }
+    }
   }
+  // border: 1px solid;
 }
